@@ -28,11 +28,11 @@ module ActiveMerchant
         }
       }
       
-      INVALID_LOGIN  = "aws:Client.InvalidAccessKeyId"    
       ENV_NAMESPACES = { 'xmlns:xsd' => 'http://www.w3.org/2001/XMLSchema',
                          'xmlns:env' => 'http://schemas.xmlsoap.org/soap/envelope/',
                          'xmlns:xsi' => 'http://www.w3.org/2001/XMLSchema-instance'
                        }
+
       AWS_SECURITY_ATTRIBUTES = {
         "env:actor" => "http://schemas.xmlsoap.org/soap/actor/next",
         "env:mustUnderstand" => "0",
@@ -62,25 +62,14 @@ module ActiveMerchant
       def self.sign(aws_secret_access_key, auth_string)
         Base64.encode64(OpenSSL::HMAC.digest(@@digest, aws_secret_access_key, auth_string)).strip
       end
-
-      def status
-        commit :status, build_status_request
-      end
-      
-      # def status
-      #   login = @options[:login]
-      #   timestamp = "#{Time.now.utc.strftime("%Y-%m-%dT%H:%M:%S")}Z"
-      #   signature = self.class.sign(@options[:password], "GetServiceStatus#{timestamp}")
-      #   
-      #   url = "#{OUTBOUND_URL}?Action=GetServiceStatus&Version=#{VERSION}&AWSAccessKeyId=#{login}&Timestamp=#{timestamp}&Signature=#{signature}"
-      #   
-      #   response = ssl_get(url)
-      # end
-
-      
+            
       def initialize(options = {})
         requires!(options, :login, :password)
         super
+      end
+      
+      def status
+        commit :status, build_status_request
       end
 
       def fulfill(order_id, shipping_address, line_items, options = {})   
@@ -101,7 +90,6 @@ module ActiveMerchant
       end
 
       private
-      # generic request format 
       def soap_request(request)
         xml = Builder::XmlMarkup.new :indent => 2
         xml.instruct!
@@ -116,7 +104,6 @@ module ActiveMerchant
         xml.target!
       end
       
-      # STATUS request
       def build_status_request
         request = OPERATIONS[:status]
         soap_request(request) do |xml|
@@ -124,7 +111,6 @@ module ActiveMerchant
         end
       end
       
-      # LIST ORDERS request
       def build_get_current_fulfillment_orders_request
         request = OPERATIONS[:list]
         soap_request(request) do |xml|
@@ -135,7 +121,6 @@ module ActiveMerchant
         end
       end
 
-      # POST FULFILLMENT request
       def build_fulfillment_request(order_id, shipping_address, line_items, options)
         request = OPERATIONS[:create]
         soap_request(request) do |xml|
@@ -216,7 +201,6 @@ module ActiveMerchant
         response
       end
       
-      # extra the error message
       def parse_error(http_response)
         response = {}
         response[:http_code] = http_response.code
@@ -244,187 +228,3 @@ module ActiveMerchant
     end 
   end
 end
-
-
-     
-# valid CREATE response
-# ---------------------
-# <?xml version="1.0"?>
-# <env:Envelope xmlns:env="http://schemas.xmlsoap.org/soap/envelope/">
-#   <env:Body>
-#     <ns1:CreateFulfillmentOrderResponse xmlns:ns1="http://fba-outbound.amazonaws.com/doc/2007-08-02/">
-#       <ns1:ResponseMetadata>
-#         <ns1:RequestId>ccd0116d-a476-48ac-810e-778eebe5e5e2</ns1:RequestId>
-#       </ns1:ResponseMetadata>
-#     </ns1:CreateFulfillmentOrderResponse>
-#   </env:Body>
-# </env:Envelope>
-#
-# invalid CREATE response
-# -----------------------
-# <?xml version="1.0"?>
-# <env:Envelope xmlns:env="http://schemas.xmlsoap.org/soap/envelope/" xmlns:aws="http://webservices.amazon.com/AWSFault/2005-15-09">
-#   <env:Body>
-#     <env:Fault>
-#       <faultcode>aws:Client.MissingParameter</faultcode>
-#       <faultstring>The request must contain the parameter Item.</faultstring>
-#       <detail>
-#         <aws:RequestId xmlns:aws="http://webservices.amazon.com/AWSFault/2005-15-09">edc852d3-937f-40f5-9d72-97b7da897b38</aws:RequestId>
-#       </detail>
-#     </env:Fault>
-#   </env:Body>
-# </env:Envelope>
-
-# valid STATUS response
-# ---------------------
-# <?xml version="1.0"?>
-# <env:Envelope xmlns:env="http://schemas.xmlsoap.org/soap/envelope/">
-#   <env:Body>
-#     <ns1:GetServiceStatusResponse xmlns:ns1="http://fba-outbound.amazonaws.com/doc/2007-08-02/">
-#       <ns1:GetServiceStatusResult>
-#         <ns1:Status>2009-06-05T18:36:19Z service available [Version: 2007-08-02]</ns1:Status>
-#       </ns1:GetServiceStatusResult>
-#       <ns1:ResponseMetadata>
-#         <ns1:RequestId>1e04fabc-fbaa-4ae5-836a-f0c60f1d301a</ns1:RequestId>
-#       </ns1:ResponseMetadata>
-#     </ns1:GetServiceStatusResponse>
-#   </env:Body>
-# </env:Envelope>
-#
-# invalid STATUS response
-# -----------------------
-# <?xml version="1.0"?>
-# <env:Envelope xmlns:env="http://schemas.xmlsoap.org/soap/envelope/" xmlns:aws="http://webservices.amazon.com/AWSFault/2005-15-09">
-#   <env:Body>
-#     <env:Fault>
-#       <faultcode>aws:Client.InvalidClientTokenId</faultcode>
-#       <faultstring>The AWS Access Key Id you provided does not exist in our records.</faultstring>
-#       <detail>
-#         <aws:RequestId xmlns:aws="http://webservices.amazon.com/AWSFault/2005-15-09">51de28ce-c380-46c4-bf95-62bbf8cc4682</aws:RequestId>
-#       </detail>
-#     </env:Fault>
-#   </env:Body>
-# </env:Envelope>  
-
-# valid LIST response
-# -------------------
-# <?xml version="1.0"?>
-# <env:Envelope xmlns:env="http://schemas.xmlsoap.org/soap/envelope/">
-#   <env:Body>
-#     <ns1:ListAllFulfillmentOrdersResponse xmlns:ns1="http://fba-outbound.amazonaws.com/doc/2007-08-02/">
-#       <ns1:ListAllFulfillmentOrdersResult>
-#         <ns1:NextToken>H4sIAAAAAAAAALMpVMi0VTJTUsizVTJVUsi1VUpLzClOVVJItVUyMjCw1DUw0zUwDTG0sDKxtDK21LM0NdY1MLcyMFBSKEZSYRJiaAJRAZW1s0mzC3L19Q9z9LHRTwPxnP39gkN9XYPAXP1COwCEc53ZegAAAA==</ns1:NextToken>
-#         <ns1:HasNext>false</ns1:HasNext>
-#         <ns1:FulfillmentOrder>
-#           <ns1:MerchantFulfillmentOrderId>c7f7921c29e966f2f50272a532deca9c</ns1:MerchantFulfillmentOrderId>
-#           <ns1:DisplayableOrderId>c7f7921c29e966f2f50272a532deca9c</ns1:DisplayableOrderId>
-#           <ns1:DisplayableOrderDateTime>2009-06-04T18:30:19Z</ns1:DisplayableOrderDateTime>
-#           <ns1:DisplayableOrderComment>Delayed due to tornados</ns1:DisplayableOrderComment>
-#           <ns1:ShippingSpeedCategory>Standard</ns1:ShippingSpeedCategory>
-#           <ns1:DestinationAddress>
-#             <ns1:Name>Johnny Chase</ns1:Name>
-#             <ns1:Line1>100 Information Super Highway</ns1:Line1>
-#             <ns1:Line2>Suite 66</ns1:Line2>
-#             <ns1:City>Beverly Hills</ns1:City>
-#             <ns1:StateOrProvinceCode>CA</ns1:StateOrProvinceCode>
-#             <ns1:CountryCode>US</ns1:CountryCode>
-#             <ns1:PostalCode>90210</ns1:PostalCode>
-#           </ns1:DestinationAddress>
-#           <ns1:FulfillmentPolicy>FillOrKill</ns1:FulfillmentPolicy>
-#           <ns1:FulfillmentMethod>Consumer</ns1:FulfillmentMethod>
-#           <ns1:ReceivedDateTime>2009-06-05T18:30:19Z</ns1:ReceivedDateTime>
-#           <ns1:FulfillmentOrderStatus>Invalid</ns1:FulfillmentOrderStatus>
-#           <ns1:StatusUpdatedDateTime>2009-06-05T18:30:46Z</ns1:StatusUpdatedDateTime>
-#         </ns1:FulfillmentOrder>
-#         <ns1:FulfillmentOrder>
-#           <ns1:MerchantFulfillmentOrderId>168b078302d18db7f39415431a860e6b</ns1:MerchantFulfillmentOrderId>
-#           <ns1:DisplayableOrderId>168b078302d18db7f39415431a860e6b</ns1:DisplayableOrderId>
-#           <ns1:DisplayableOrderDateTime>2009-06-04T18:40:08Z</ns1:DisplayableOrderDateTime>
-#           <ns1:DisplayableOrderComment>Delayed due to tornados</ns1:DisplayableOrderComment>
-#           <ns1:ShippingSpeedCategory>Standard</ns1:ShippingSpeedCategory>
-#           <ns1:DestinationAddress>
-#             <ns1:Name>Johnny Chase</ns1:Name>
-#             <ns1:Line1>100 Information Super Highway</ns1:Line1>
-#             <ns1:Line2>Suite 66</ns1:Line2>
-#             <ns1:City>Beverly Hills</ns1:City>
-#             <ns1:StateOrProvinceCode>CA</ns1:StateOrProvinceCode>
-#             <ns1:CountryCode>US</ns1:CountryCode>
-#             <ns1:PostalCode>90210</ns1:PostalCode>
-#           </ns1:DestinationAddress>
-#           <ns1:FulfillmentPolicy>FillOrKill</ns1:FulfillmentPolicy>
-#           <ns1:FulfillmentMethod>Consumer</ns1:FulfillmentMethod>
-#           <ns1:ReceivedDateTime>2009-06-05T18:40:08Z</ns1:ReceivedDateTime>
-#           <ns1:FulfillmentOrderStatus>Invalid</ns1:FulfillmentOrderStatus>
-#           <ns1:StatusUpdatedDateTime>2009-06-05T18:40:16Z</ns1:StatusUpdatedDateTime>
-#         </ns1:FulfillmentOrder>
-#         <ns1:FulfillmentOrder>
-#           <ns1:MerchantFulfillmentOrderId>d9ade2d2ceab0b57457949169cd5ad7e</ns1:MerchantFulfillmentOrderId>
-#           <ns1:DisplayableOrderId>d9ade2d2ceab0b57457949169cd5ad7e</ns1:DisplayableOrderId>
-#           <ns1:DisplayableOrderDateTime>2009-06-04T18:40:35Z</ns1:DisplayableOrderDateTime>
-#           <ns1:DisplayableOrderComment>Delayed due to tornados</ns1:DisplayableOrderComment>
-#           <ns1:ShippingSpeedCategory>Standard</ns1:ShippingSpeedCategory>
-#           <ns1:DestinationAddress>
-#             <ns1:Name>Johnny Chase</ns1:Name>
-#             <ns1:Line1>100 Information Super Highway</ns1:Line1>
-#             <ns1:Line2>Suite 66</ns1:Line2>
-#             <ns1:City>Beverly Hills</ns1:City>
-#             <ns1:StateOrProvinceCode>CA</ns1:StateOrProvinceCode>
-#             <ns1:CountryCode>US</ns1:CountryCode>
-#             <ns1:PostalCode>90210</ns1:PostalCode>
-#           </ns1:DestinationAddress>
-#           <ns1:FulfillmentPolicy>FillOrKill</ns1:FulfillmentPolicy>
-#           <ns1:FulfillmentMethod>Consumer</ns1:FulfillmentMethod>
-#           <ns1:ReceivedDateTime>2009-06-05T18:40:36Z</ns1:ReceivedDateTime>
-#           <ns1:FulfillmentOrderStatus>Invalid</ns1:FulfillmentOrderStatus>
-#           <ns1:StatusUpdatedDateTime>2009-06-05T18:40:41Z</ns1:StatusUpdatedDateTime>
-#         </ns1:FulfillmentOrder>
-#         <ns1:FulfillmentOrder>
-#           <ns1:MerchantFulfillmentOrderId>9fc3f2e379fe36d56ffa00e2e052ba94</ns1:MerchantFulfillmentOrderId>
-#           <ns1:DisplayableOrderId>9fc3f2e379fe36d56ffa00e2e052ba94</ns1:DisplayableOrderId>
-#           <ns1:DisplayableOrderDateTime>2009-06-04T18:40:52Z</ns1:DisplayableOrderDateTime>
-#           <ns1:DisplayableOrderComment>Delayed due to tornados</ns1:DisplayableOrderComment>
-#           <ns1:ShippingSpeedCategory>Standard</ns1:ShippingSpeedCategory>
-#           <ns1:DestinationAddress>
-#             <ns1:Name>Johnny Chase</ns1:Name>
-#             <ns1:Line1>100 Information Super Highway</ns1:Line1>
-#             <ns1:Line2>Suite 66</ns1:Line2>
-#             <ns1:City>Beverly Hills</ns1:City>
-#             <ns1:StateOrProvinceCode>CA</ns1:StateOrProvinceCode>
-#             <ns1:CountryCode>US</ns1:CountryCode>
-#             <ns1:PostalCode>90210</ns1:PostalCode>
-#           </ns1:DestinationAddress>
-#           <ns1:FulfillmentPolicy>FillOrKill</ns1:FulfillmentPolicy>
-#           <ns1:FulfillmentMethod>Consumer</ns1:FulfillmentMethod>
-#           <ns1:ReceivedDateTime>2009-06-05T18:40:52Z</ns1:ReceivedDateTime>
-#           <ns1:FulfillmentOrderStatus>Invalid</ns1:FulfillmentOrderStatus>
-#           <ns1:StatusUpdatedDateTime>2009-06-05T18:41:16Z</ns1:StatusUpdatedDateTime>
-#         </ns1:FulfillmentOrder>
-#         <ns1:FulfillmentOrder>
-#           <ns1:MerchantFulfillmentOrderId>bd97c45f78d83b654c1948ad6a476ade</ns1:MerchantFulfillmentOrderId>
-#           <ns1:DisplayableOrderId>bd97c45f78d83b654c1948ad6a476ade</ns1:DisplayableOrderId>
-#           <ns1:DisplayableOrderDateTime>2009-06-04T18:46:48Z</ns1:DisplayableOrderDateTime>
-#           <ns1:DisplayableOrderComment>Delayed due to tornados</ns1:DisplayableOrderComment>
-#           <ns1:ShippingSpeedCategory>Standard</ns1:ShippingSpeedCategory>
-#           <ns1:DestinationAddress>
-#             <ns1:Name>Johnny Chase</ns1:Name>
-#             <ns1:Line1>100 Information Super Highway</ns1:Line1>
-#             <ns1:Line2>Suite 66</ns1:Line2>
-#             <ns1:City>Beverly Hills</ns1:City>
-#             <ns1:StateOrProvinceCode>CA</ns1:StateOrProvinceCode>
-#             <ns1:CountryCode>US</ns1:CountryCode>
-#             <ns1:PostalCode>90210</ns1:PostalCode>
-#           </ns1:DestinationAddress>
-#           <ns1:FulfillmentPolicy>FillOrKill</ns1:FulfillmentPolicy>
-#           <ns1:FulfillmentMethod>Consumer</ns1:FulfillmentMethod>
-#           <ns1:ReceivedDateTime>2009-06-05T18:46:48Z</ns1:ReceivedDateTime>
-#           <ns1:FulfillmentOrderStatus>Invalid</ns1:FulfillmentOrderStatus>
-#           <ns1:StatusUpdatedDateTime>2009-06-05T18:47:22Z</ns1:StatusUpdatedDateTime>
-#         </ns1:FulfillmentOrder>
-#       </ns1:ListAllFulfillmentOrdersResult>
-#       <ns1:ResponseMetadata>
-#         <ns1:RequestId>1c9038ff-da88-4152-9fb0-8ab8fabccea4</ns1:RequestId>
-#       </ns1:ResponseMetadata>
-#     </ns1:ListAllFulfillmentOrdersResponse>
-#   </env:Body>
-# </env:Envelope>
-
