@@ -1,3 +1,4 @@
+* Update Amazon FBA to use AWS credentials [John Tajima]
 * Use new connection code from ActiveMerchant [cody]
 * Add #valid_credentials? support to all fulfillment services [cody]
 * Return 'Access Denied' message when Webgistix credenentials are invalid [cody]
